@@ -41,6 +41,7 @@ Build-Depends: cmake,
                libunity-dev (>= 6.5.2),
                libzeitgeist-dev (>= 0.3.18),
                libxfixes-dev (>= 1:5.0-4ubuntu4),
+               libxi-dev (>= 1.6.99.1)
                libgtest-dev,
                google-mock,
 Standards-Version: 3.9.3
